<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScanEvrythng</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Welcome Screen -->
    <string name="welcome_title">ScanEvrythng!</string>
    <string name="start_scanning_intro_text">Use the below option to scan things around you and upload them via the Evrythng API</string>
    <string name="start_scanning_button_txt">Start Scanning!</string>
    <string name="show_list_intro_text">Use the below option to list everything stored in your Evrythng account.</string>
    <string name="show_list_of_thngs_button_text">Show Me Thngs!</string>

    <!-- Scanning Screen -->


    <!-- List of Thngs Screen -->
    <string name="show_list_title">List Of Thngs</string>
    <string name="show_list_empty_list">No Thngs to be found here. Why not scan some to create some?</string>

    <!-- Thng Details Screen -->

    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_thng_list">ThngListActivity</string>

    <!-- Configuration Settings -->
    <string name="evrythng_protocol">https://</string>
    <string name="evrythng_base_url">api.evrythng.com</string>
    <string name="evrythng_access_token">KXokQH4iiDvmjMM4jxOsLr3QYnumUZ1wxeG0dAxTxFOUrUDNpTnYiq9T3OpaIiAKycGovwfD8Ov7i3IV</string>

    <string name="scandit_protocol">https://</string>
    <string name="scandit_base_url">api.scandit.com/v2/products</string>
    <string name="scandit_application_key">NSb/zvhhEeOPm/AsuKmjaMdnE9K/BW0IbMKk5NNbOcE</string>
    <string name="scandit_product_api_key">QCxAFKqqpvcYUAlmiSU2-pUOPj6_bqK8cVVdNuCuO2T</string>

</resources>
