<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mike.scanevrythng.scanner.activity.WelcomeActivity">

    <TextView
        android:text="@string/welcome_title"
        android:textSize="@dimen/text_size_large"
        android:textAlignment="center"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/start_scanning_intro_text"
        android:textSize="@dimen/text_size_small"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/start_scanning_button"
        android:text="@string/start_scanning_button_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/abc_action_bar_icon_vertical_padding"
        android:gravity="center"/>

    <TextView
        android:text="@string/show_list_intro_text"
        android:textSize="@dimen/text_size_small"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/show_list_button"
        android:text="@string/show_list_of_thngs_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/abc_action_bar_icon_vertical_padding"
        android:gravity="center"/>

</LinearLayout>
